--- a/attendance_customization/attendance_customization/doctype/attendance_policy_settings/attendance_policy_settings.json
+++ b/attendance_customization/attendance_customization/doctype/attendance_policy_settings/attendance_policy_settings.json
@@ -8,6 +8,7 @@
   "engine": "InnoDB",
   "field_order": [
     "enable_late_penalty",
+    "apply_from_date",
     "strike_threshold",
     "counting_mode",
     "penalty_action"
@@ -18,6 +19,14 @@
       "fieldname": "enable_late_penalty",
       "fieldtype": "Check",
       "label": "Enable Late Penalty"
+    },
+    {
+      "fieldname": "apply_from_date",
+      "fieldtype": "Date",
+      "label": "Apply Policy From",
+      "description": "Policy will be applied to attendance records from this date onwards",
+      "depends_on": "enable_late_penalty",
+      "mandatory_depends_on": "enable_late_penalty"
     },
     {
       "depends_on": "enable_late_penalty",
@@ -47,7 +56,7 @@
   "index_web_pages_for_search": 1,
   "issingle": 1,
   "links": [],
-  "modified": "2025-05-31 10:00:00.000000",
+  "modified": "2025-05-31 14:00:00.000000",
   "modified_by": "Administrator",
   "module": "Attendance Customization",
   "name": "Attendance Policy Settings",
