custom cumulative added

--- a/attendance_customization/attendance_customization/doctype/attendance_policy_settings/attendance_policy_settings.json
+++ b/attendance_customization/attendance_customization/doctype/attendance_policy_settings/attendance_policy_settings.json
@@ -42,7 +42,7 @@
       "fieldtype": "Select",
       "label": "Counting Mode",
       "mandatory_depends_on": "enable_late_penalty",
-      "options": "Cumulative\nStrictly Consecutive"
+      "options": "Cumulative\nStrictly Consecutive\nCumulative with Reset"
     },
     {
       "depends_on": "enable_late_penalty",
